feat: add header

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,45 @@
     <title>Test Task</title>
 </head>
 <body>
-
+    <div class="wrapper">
+            <div class="window">
+                <header class="header">
+                    <nav class="header__navigation">
+                        <ul class="header__list">
+                            <li>
+                                <button class="header__button">
+                                    Создать папку
+                                </button>
+                            </li>
+                            <li>
+                                <button class="header__button">
+                                    Удалить папку
+                                </button>
+                            </li>
+                            <li>
+                                <button class="header__button">
+                                    Загрузить файл
+                                </button>
+                            </li>
+                            <li>
+                                <button class="header__button">
+                                    Скачать файл
+                                </button>
+                            </li>
+                            <li>
+                                <button class="header__button">
+                                    Удалить файл
+                                </button>
+                            </li>
+                            <li>
+                                <button class="header__button">
+                                    Переименовать
+                                </button>
+                            </li>
+                        </ul>
+                    </nav>
+                </header>
+            </div>
+    </div>
 </body>
 </html>
