--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
             <div class="window">
-                <header class="header">
+                <header class="window__header header">
                     <nav class="header__navigation">
                         <ul class="header__list">
                             <li>
@@ -46,6 +46,14 @@
                         </ul>
                     </nav>
                 </header>
+                <main class="window__main main">
+                    <aside class="main__sidebar sidebar">
+
+                    </aside>
+                    <nav class="main__tabs tabs">
+
+                    </nav>
+                </main>
             </div>
     </div>
 </body>
