feat: add create popup function

--- a/src/index.html
+++ b/src/index.html
@@ -14,32 +14,32 @@
                     <nav class="header__navigation">
                         <ul class="header__list">
                             <li>
-                                <button class="header__button">
+                                <button data-func='createFolder' class="header__button">
                                     Создать папку
                                 </button>
                             </li>
                             <li>
-                                <button class="header__button">
+                                <button data-func='deleteFolder' class="header__button">
                                     Удалить папку
                                 </button>
                             </li>
                             <li>
-                                <button class="header__button">
+                                <button data-func='loadFolder' class="header__button">
                                     Загрузить файл
                                 </button>
                             </li>
                             <li>
-                                <button class="header__button">
+                                <button data-func='downloadFolder' class="header__button">
                                     Скачать файл
                                 </button>
                             </li>
                             <li>
-                                <button class="header__button">
+                                <button data-func='deleteFile' class="header__button">
                                     Удалить файл
                                 </button>
                             </li>
                             <li>
-                                <button class="header__button">
+                                <button data-func='rename' class="header__button">
                                     Переименовать
                                 </button>
                             </li>
