feat: add create, remove and rename folder function

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
                                 </button>
                             </li>
                             <li>
-                                <button data-func='deleteFolder' class="header__button">
+                                <button data-func='removeFolder' class="header__button">
                                     Удалить папку
                                 </button>
                             </li>
