feat: add highlightAll

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
 
                         </nav>
                         <pre class='main__content'>
-
+                            <code></code>
                         </pre>
                     </div>
 
