feat: add save html in localStorage, refactor styles and components

--- a/src/index.html
+++ b/src/index.html
@@ -54,11 +54,10 @@
                     <div class='main__area'>
                         <nav class="main__tabs tabs">
                             <ul>
-
                             </ul>
                         </nav>
                         <pre class='main__content'>
-                            <code></code>
+                            <code class='language-javascript'></code>
                         </pre>
                     </div>
 
